--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,6 +70,7 @@
                app:layout_constraintBottom_toBottomOf="parent"/>
 
            <Spinner
+               android:id="@+id/spinnerStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/searchEditText"
