--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-        <!-- Define variables if needed -->
+
     </data>
 
     <TableLayout
@@ -18,22 +18,15 @@
             android:layout_height="wrap_content"
             android:background="@android:color/white">
 
-
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/white">
-
             <TextView
                 android:id="@+id/titleName"
                 android:text="Paracetamol"
                 android:padding="8dp"
-                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_weight="2"
                 android:textStyle="bold"
                 android:gravity="center"
-                android:textSize="14sp"
+                android:textSize="18sp"
                 android:background="@android:color/white"/>
 
             <TextView
@@ -41,6 +34,7 @@
                 android:text="Painkiller"
                 android:padding="8dp"
                 android:textStyle="bold"
+                android:layout_width="0dp"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:textSize="14sp"
@@ -52,7 +46,13 @@
                 android:layout_height="38dp"
                 android:src="@drawable/icon_cam"
                 android:padding="8dp"
-                android:layout_weight="1"
+                android:background="@android:color/white"/>
+            <ImageView
+                android:id="@+id/ICOnDELETE"
+                android:layout_width="42dp"
+                android:layout_height="38dp"
+                android:src="@drawable/delete_iconn"
+                android:padding="8dp"
                 android:background="@android:color/white"/>
 
         </TableRow>
