--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,25 +15,24 @@
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
-           <ImageView
-               android:id="@+id/bottom_logo_img"
+
+           <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="115dp"
-               app:layout_constraintBottom_toBottomOf="parent"
-               android:src="@drawable/downimg"
                android:background="#FA0B7BFF"
-               />
-           <Button
-               android:id="@+id/cpture_BTN"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:text="Capture"
-               android:backgroundTint="#FA0B7BFF"
-               app:layout_constraintBottom_toTopOf="@id/bottom_logo_img"
-               app:layout_constraintStart_toStartOf="parent"
-               app:layout_constraintEnd_toEndOf="parent"
-               android:layout_marginBottom="15dp"
-               />
+               app:layout_constraintBottom_toBottomOf="parent"
+               app:layout_constraintTop_toBottomOf="@id/RecylerDrugs">
+               <ImageView
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:src="@drawable/downimg"
+                   app:layout_constraintStart_toStartOf="parent"
+                   app:layout_constraintTop_toTopOf="parent"
+                   app:layout_constraintEnd_toEndOf="parent"
+                   />
+
+           </androidx.constraintlayout.widget.ConstraintLayout>
+
 
            <EditText
                android:id="@+id/searchEditText"
@@ -54,10 +53,8 @@
                android:layout_width="match_parent"
                android:layout_height="0dp"
                tools:listitem="@layout/item_search"
-               app:layout_constraintTop_toBottomOf="@id/searchEditText"
-               app:layout_constraintBottom_toTopOf="@id/cpture_BTN"
-
-
+               app:layout_constraintTop_toBottomOf="@id/spinnersfilters"
+               android:layout_marginTop="10dp"
                />
 
            <ProgressBar
@@ -69,17 +66,33 @@
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
 
-           <Spinner
-               android:id="@+id/spinnerStatus"
-               android:layout_width="wrap_content"
+           <LinearLayout
+               android:id="@+id/spinnersfilters"
+               android:layout_width="match_parent"
                android:layout_height="wrap_content"
-               app:layout_constraintStart_toEndOf="@id/searchEditText"
-               android:spinnerMode="dropdown"
-               app:layout_constraintTop_toTopOf="@id/searchEditText"
-               app:layout_constraintBottom_toBottomOf="@id/searchEditText"
-               android:src="@drawable/dropdown"
+               app:layout_constraintTop_toBottomOf="@id/searchEditText"
+               android:orientation="horizontal"
+               android:layout_marginTop="8dp"
+               >
+               <Spinner
+                   android:id="@+id/spinnerform"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   app:layout_constraintStart_toStartOf="parent"
+                   android:spinnerMode="dialog"
+                   android:src="@drawable/dropdown"
+                   />
+               <Spinner
+                   android:id="@+id/spinnerstatus"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   app:layout_constraintStart_toStartOf="parent"
+                   android:spinnerMode="dialog"
+                   android:src="@drawable/dropdown"
+                   />
+           </LinearLayout>
 
-               />
+
 
        </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
