--- a/app/src/main/res/layout/activity_login_activty.xml
+++ b/app/src/main/res/layout/activity_login_activty.xml
@@ -6,6 +6,8 @@
 
     >
     <data>
+        <import type="android.view.View"/>
+
         <variable
             name="vm"
             type="com.example.fastaf.ui.login.LoginViewModel" />
@@ -17,6 +19,14 @@
         android:background="@drawable/backmain"
         >
         <ImageView
+            android:layout_width="300dp"
+            android:layout_height="140dp"
+            android:src="@drawable/downimg"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <ImageView
             android:id="@+id/logo"
             android:layout_width="142dp"
             android:layout_height="54dp"
@@ -25,43 +35,42 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="55dp"/>
+            android:layout_marginBottom="70dp"/>
     
-        <LinearLayout
-            android:id="@+id/linear1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/logo">
+
 
             <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
+                android:layout_width="350dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:Binder="@{vm.erorUserName}"
-                android:layout_marginTop="60dp"
+                app:layout_constraintTop_toBottomOf="@id/logo"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="30dp"
                 android:id="@+id/input_Name_label">
                 <EditText
                     android:id="@+id/User_Name"
-                    android:layout_width="match_parent"
+                    android:layout_width="350dp"
                     android:layout_height="wrap_content"
                     android:hint="Enter ur UserName "
                     android:text="@={vm.UserName}"
                     android:inputType="text"/>
+
             </com.google.android.material.textfield.TextInputLayout>
-        </LinearLayout>
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/loginbtn"
             android:layout_width="170dp"
             android:layout_height="64dp"
-            app:layout_constraintTop_toBottomOf="@id/linear1"
+           app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="50dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:background="@drawable/mix_color_btn"
             android:layout_marginTop="12dp"
-            android:onClick="@{()->vm.GoToHome()}"
             >
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -73,11 +82,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:textColor="@color/white"
                 />
-
-
-
-
-
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
